--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tingle-select-field",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "The `Slot Component` for tinglejs",
   "repository": "https://github.com/tinglejs/tingle-select-field.git",
   "author": {
@@ -20,19 +20,21 @@
   ],
   "dependencies": {
     "classnames": "^2.1.2",
-    "fastclick": "^1.0.6",
-    "react": "^0.13.3",
-    "tingle-context": "latest",
-    "tingle-icon": "latest",
-    "tingle-slot": "latest",
-    "tingle-style": "latest",
-    "zepto": "0.0.4"
+    "tingle-context": "~0.1.0",
+    "tingle-style": "~0.1.0",
+    "tingle-slot": "~0.1.0",
+    "tingle-icon": "~0.1.0",
+    "tingle-field": "~0.1.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
     "gulp": "^3.9.0",
-    "tingle-dev-tools": "latest"
+    "tingle-dev-tools": "latest",
+    "tingle-group-list": "~0.1.0",
+    "fastclick": "^1.0.6",
+    "react": "^0.13.3",
+    "zepto": "0.0.4"
   },
   "scripts": {
     "start": "gulp server"
